--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donate The Huminity Today</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="container">
+        <h1>Let's Help Those Who Are More in Need</h1>
+        <h3>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</h3>
+        <button>Donate Now</button>
+    </section>
 </body>
 </html>
